--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-IISc ACM Student Chapter
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <title>IISc ACM Student Chapter<title>
+</head>
+<body>
+  <h1>IISc ACM Student Chapter</h1>
+</body>
+</html>
