--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>IISc ACM Student Chapter<title>
+  <title>IISc ACM Student Chapter</title>
 </head>
 <body>
   <h1>IISc ACM Student Chapter</h1>
