--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@ layout: default
 ---
 
     {% include header.html %}
+    {% if site.animated_header == "true" %}
+      {% include animated_header.html %}
+      {% else %}
+      {% include slider.html %}
+    {% endif %}
     {% include header_bottom_area.html %}   
     {% include blog_and_items.html %}
     {% include timeline_area.html %}
