--- a/pages/contact.html
+++ b/pages/contact.html
@@ -18,7 +18,7 @@ keywords: "responsive,jekyll,minimal template"
                  </header>
                  <footer class="feature-content">
                     <h5 class="heading-5"><a href="#">Location </a></h5>
-                    <p> 32, Park Road Drive <br />Link Town, London </p>
+                    <p> Indian Institute of Science <br />Bengaluru - 560012, Karnataka </p>
                  </footer>
               </article>
            </div>
@@ -29,7 +29,7 @@ keywords: "responsive,jekyll,minimal template"
                  </header>
                  <footer class="feature-content">
                     <h5 class="heading-5"><a href="#">Email </a></h5>
-                    <p> support@themeix.com <br />themeix@gmail.com </p>
+                    <p> shriramr@iisc.ac.in <br /> <br /> </p>
                  </footer>
               </article>
            </div>
