Refinements to list

--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -26,22 +26,23 @@ keywords: "about,us"
                <p>The Chapter aspires to create a connected community of computer science researchers within the institute while maintaining industry collaborations if they serve research interests. The Chapter, in it's first year of operation intends on organizing the following events/activities: </p>
                <dl>
                     <dt>Career Counsel</dt>
-                    <dd>- The Chapter intends on hosting regular formal or informal interactions with alumni in academia and industry. Assisting students in making an informed career decision is the broad agenda of these interactions. </dd>
+                    <dd>The Chapter intends on hosting regular formal or informal interactions with alumni in academia and industry. Assisting students in making an informed career decision is the broad agenda of these interactions. </dd>
                     <dt>Dress Rehearsals for Presentations</dt>
-                    <dd>- Upon request from Chapter members, the Chapter can arrange a suitable platform for authors of accepted papers to present their work prior to the Conference presentation and gain practice and confidence to effectively present their paper at the venue. Chapter members must contact the Student Representative for the Chapter to make suitable arrangements. </dd>
+                    <dd>Upon request from Chapter members, the Chapter can arrange a suitable platform for authors of accepted papers to present their work prior to the Conference presentation and gain practice and confidence to effectively present their paper at the venue. Chapter members must contact the Student Representative for the Chapter to make suitable arrangements. </dd>
                     <dt>Annual Student Get-together</dt>
-                    <dd>- The Chapter will organize an annual get-together for it’s chapter member with the sole purpose of improving comradery. </dd>
+                    <dd>The Chapter will organize an annual get-together for it’s chapter member with the sole purpose of improving comradery. </dd>
                     <dt>Chapter Newsletter</dt>
-                    <dd>- The Chapter’s quarterly newsletter is a primary instrument to achieve a connected community of budding and established researchers. The newsletter must cover topics pertaining to the latest research by students of IISc, upcoming fellowship opportunities, and occasionally computer science trivia. </dd>
+                    <dd>The Chapter’s quarterly newsletter is a primary instrument to achieve a connected community of budding and established researchers. The newsletter must cover topics pertaining to the latest research by students of IISc, upcoming fellowship opportunities, and occasionally computer science trivia. </dd>
                 </dl>
-               <p>Lighthouse Goals(LEO): </p>
+               <p></p> 
+               <h5>Lighthouse Goals (LEO) </h5>
                <dl>
                    <dt>Leadership</dt>
-                   <dd>- The Chapter must take active steps towards cultivating and identifying leadership qualities among its members. This will help the Chapter in maintaining a steady flow of Chapter Officers and volunteers while also helping the community by producing effective leaders. </dd>
+                   <dd>The Chapter must take active steps towards cultivating and identifying leadership qualities among its members. This will help the Chapter in maintaining a steady flow of Chapter Officers and volunteers while also helping the community by producing effective leaders. </dd>
                    <dt>Events</dt>
-                   <dd>- The Chapter Officers are encouraged to add events to its roster. However the events must: benefit IISc’s computer science community, align with IISc’s research spirit, and strictly foster scientific thinking. </dd>
+                   <dd>The Chapter Officers are encouraged to add events to its roster. However the events must: benefit IISc’s computer science community, align with IISc’s research spirit, and strictly foster scientific thinking. </dd>
                    <dt>Outreach</dt>
-                   <dd>- The Chapter must work towards increasing its outreach. The Chapter must emerge as a flag-bearer in the region and assist other local Chapters in their operation. </dd>
+                   <dd>The Chapter must work towards increasing its outreach. The Chapter must emerge as a flag-bearer in the region and assist other local Chapters in their operation. </dd>
                </dl>
             </div>
          </div>
