--- a/pages/open-positions.html
+++ b/pages/open-positions.html
@@ -18,48 +18,39 @@ keywords: "positions,open"
                <h4 class="heading-4">Student Representative</h4>
                <dl>
                     <dt>Responsibilities</dt>
-                    <dd>- The Student Representative is required to manage the membership drive. The Student Representative acts as the point of contact between the students and the Chapter. Good Communication skills are a pre-reqisite for this position. </dd>
-                    <dt>Tenure</dt>
-                    <dd>- Annual (July to July)</dd>
-                    <dt>Count</dt>
-                    <dd>- 2 </dd>
+                    <dd>The Student Representative is required to manage the membership drive. The Student Representative acts as the point of contact between the students and the Chapter. Good Communication skills are a pre-reqisite for this position. </dd>
+                    <dt>Tenure &amp; Count </dt>
+                    <dd>Annual (July to July) &amp; 2</dd>
                 </dl>
                 <h4 class="heading-4">Logistics Co-ordinator</h4>
                 <dl>
                     <dt>Responsibilities</dt>
-                    <dd>- The Logistics Co-ordinator manages logistics such as room permissions, cab bookings, catering, etc for a Chapter Event. </dd>
-                    <dt>Tenure</dt>
-                    <dd>- Annual (July to July)</dd>
-                    <dt>Count</dt>
-                    <dd>- 2 </dd>
+                    <dd>The Logistics Co-ordinator manages logistics such as room permissions, cab bookings, catering, etc for a Chapter Event. </dd>
+                    <dt>Tenure &amp; Count </dt>
+                    <dd>Annual (July to July) &amp; 2</dd>
                 </dl>
                 <h4 class="heading-4">Activity Co-ordinator (AC)</h4>
                 <dl>
                     <dt>Responsibilities</dt>
-                    <dd>-  Broadly responsible for managing the lifecycle of an assigned event. The co-ordinatior is expected to, using the appropriate chanels, publicize the event, manage logistics,  			  gather and submit relevant statistics and finances. Being at the centre stage of organizing an event will equip candidates interested in playing a bigger role in the Chapter's operations with hands on experience. </dd>
-                    <dt>Tenure</dt>
-                    <dd>- Duration of the event</dd>
-                    <dt>Count</dt>
-                    <dd>- One AC per event</dd>
+                    <dd>Broadly responsible for managing the lifecycle of an assigned event. The co-ordinatior is expected to, using the appropriate chanels, publicize the event, manage logistics,  			  gather and submit relevant statistics and finances. Being at the centre stage of organizing an event will equip candidates interested in playing a bigger role in the Chapter's operations with hands on experience. </dd>
+                    <dt>Tenure &amp; Count </dt>
+                    <dd>Duration of the event &amp; One AC per event</dd>
                 </dl> 
                 <h4 class="heading-4">Editor</h4>
                 <dl>
                     <dt>Responsibilities</dt>
-                    <dd>- The Editor is required to draft any document that forms the mouthpiece of the Chapter, as well as, the Annual Reports. The Editor must actively manage the Chapter's newsletter. </dd>
-                    <dt>Tenure</dt>
-                    <dd>- Annual (July to July)</dd>
-                    <dt>Count</dt>
-                    <dd>- 2 </dd>
+                    <dd>The Editor is required to draft any document that forms the mouthpiece of the Chapter, as well as, the Annual Reports. The Editor must actively manage the Chapter's newsletter. </dd>
+                    <dt>Tenure &amp; Count </dt>
+                    <dd>Annual (July to July) &amp; 2</dd>
                 </dl> 
                 <h4 class="heading-4">Web Design/Social Media Manager</h4>
                 <dl>
                     <dt>Responsibilities</dt>
-                    <dd>- Maintaining the Chapter's Webpage and social media accounts. Applicants must have good web development skills. </dd>
-                    <dt>Tenure</dt>
-                    <dd>- Annual (July to July)</dd>
-                    <dt>Count</dt>
-                    <dd>- 1 </dd>
+                    <dd>Maintaining the Chapter's Webpage and social media accounts. Applicants must have good web development skills. </dd>
+                    <dt>Tenure &amp; Count </dt>
+                    <dd>Annual (July to July) &amp; 1</dd>
                 </dl>
+                <p></p>
                 <h3>How to apply</h3>
                 <p> Please fill in the form displayed below. Note that you must be a member of IISc organization to access the form :</p>  
                 <iframe width="640px" height= "480px" src= "https://forms.office.com/Pages/ResponsePage.aspx?id=l80Vb6f240Gyxa1Bk5dkdkYrwhMqxK5OmP8yN3VKMd9UOFVPOVhERk05RUo3UDNSOFoxVDVITUo4Si4u&embed=true" frameborder= "0" marginwidth= "0" marginheight= "0" style= "border: none; max-width:100%; max-height:100vh" allowfullscreen webkitallowfullscreen mozallowfullscreen msallowfullscreen> </iframe>         </div>
