Add join us and update inaugural event date

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -40,7 +40,7 @@ keywords: "responsive,jekyll,minimal template"
                  </header>
                  <footer class="feature-content">
                     <h5 class="heading-5"><a href="#">Phone</a></h5>
-                    <p>(123) 123-1234 <br />(123) 123-1234 </p>
+                    <p> TBD </p>
                  </footer>
               </article>
            </div>
