Fix content and typos

--- a/pages/open-positions.html
+++ b/pages/open-positions.html
@@ -18,7 +18,7 @@ keywords: "positions,open"
                <h4 class="heading-4">Student Representative</h4>
                <dl>
                     <dt>Responsibilities</dt>
-                    <dd>The Student Representative is required to manage the membership drive. The Student Representative acts as the point of contact between the students and the Chapter. Good Communication skills are a pre-reqisite for this position. </dd>
+                    <dd>The Student Representative is required to manage the membership drive. The Student Representative acts as the point of contact between the students and the Chapter. Good Communication skills are a pre-requisite for this position. </dd>
                     <dt>Tenure &amp; Count </dt>
                     <dd>Annual (July to July) &amp; 2</dd>
                 </dl>
@@ -32,7 +32,7 @@ keywords: "positions,open"
                 <h4 class="heading-4">Activity Co-ordinator (AC)</h4>
                 <dl>
                     <dt>Responsibilities</dt>
-                    <dd>Broadly responsible for managing the lifecycle of an assigned event. The co-ordinatior is expected to, using the appropriate chanels, publicize the event, manage logistics,  			  gather and submit relevant statistics and finances. Being at the centre stage of organizing an event will equip candidates interested in playing a bigger role in the Chapter's operations with hands on experience. </dd>
+                    <dd>Broadly responsible for managing the lifecycle of an assigned event. The co-ordinator is expected to, using the appropriate channels, publicize the event, manage logistics,  			  gather and submit relevant statistics and finances. Being at the centre stage of organizing an event will equip candidates interested in playing a bigger role in the Chapter's operations with hands on experience. </dd>
                     <dt>Tenure &amp; Count </dt>
                     <dd>Duration of the event &amp; One AC per event</dd>
                 </dl> 
