Fix content and typos

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -29,7 +29,7 @@ keywords: "responsive,jekyll,minimal template"
                  </header>
                  <footer class="feature-content">
                     <h5 class="heading-5"><a href="#">Email </a></h5>
-                    <p> shriramr@iisc.ac.in <br /> <br /> </p>
+                    <p> iiscacmstudentchapter@iisc.ac.in <br /> <br /> </p>
                  </footer>
               </article>
            </div>
