--- a/pages/contact.html
+++ b/pages/contact.html
@@ -14,17 +14,6 @@ keywords: "responsive,jekyll,minimal template"
            <div class="col-md-6 col-lg-4">
               <article class="feature-box bg-color3">
                  <header class="feature-logo wow bounceIn" data-wow-duration="1s">
-                    <div class="feature-icon"> <i class="fa fa-address-card-o "></i></div>
-                 </header>
-                 <footer class="feature-content">
-                    <h5 class="heading-5"><a href="#">Location </a></h5>
-                    <p> Indian Institute of Science <br />Bengaluru - 560012, Karnataka </p>
-                 </footer>
-              </article>
-           </div>
-           <div class="col-md-6 col-lg-4">
-              <article class="feature-box bg-color3">
-                 <header class="feature-logo wow bounceIn" data-wow-duration="1s">
                     <div class="feature-icon"> <i class="fa fa-envelope"></i></div>
                  </header>
                  <footer class="feature-content">
@@ -40,8 +29,22 @@ keywords: "responsive,jekyll,minimal template"
                  </header>
                  <footer class="feature-content">
                     <h5 class="heading-5"><a href="#">Phone</a></h5>
-                    <p>Chair - IISc ACM Student Chapter</p>
                     <p> +91 90297 64161 </p>
+                    <p>Chair - IISc ACM Student Chapter</p>
+                 </footer>
+              </article>
+           </div>
+           <div class="col-md-6 col-lg-4">
+              <article class="feature-box bg-color3">
+                 <header class="feature-logo wow bounceIn" data-wow-duration="1s">
+                    <div class="feature-icon"> <i class="fa fa-users "></i></div>
+                 </header>
+                 <footer class="feature-content">
+                    <h5 class="heading-5"><a href="#">Social</a></h5>
+                    <ul class="footer-socials list-inline">
+                        <li class="list-inline-item"><a href="https://twitter.com/IIScACM_Chapter"><i class="fa fa-2x fa-twitter"></i></a></li>
+                        <li class="list-inline-item"><a href="https://www.linkedin.com/company/iisc-acm-student-chapter/"><i class="fa fa-2x fa-linkedin"></i></a></li>
+                    </ul>
                  </footer>
               </article>
            </div>
