Update team, footer, timeline

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -42,8 +42,8 @@ keywords: "responsive,jekyll,minimal template"
                  <footer class="feature-content">
                     <h5 class="heading-5"><a href="#">Social</a></h5>
                     <ul class="footer-socials list-inline">
-                        <li class="list-inline-item"><a href="https://twitter.com/IIScACM_Chapter"><i class="fa fa-2x fa-twitter"></i></a></li>
-                        <li class="list-inline-item"><a href="https://www.linkedin.com/company/iisc-acm-student-chapter/"><i class="fa fa-2x fa-linkedin"></i></a></li>
+                        <li class="list-inline-item"><a target="_blank" href="https://twitter.com/IIScACM_Chapter"><i class="fa fa-2x fa-twitter"></i></a></li>
+                        <li class="list-inline-item"><a target="_blank" href="https://www.linkedin.com/company/iisc-acm-student-chapter/"><i class="fa fa-2x fa-linkedin"></i></a></li>
                     </ul>
                  </footer>
               </article>
