Changes in members

--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -1,9 +1,9 @@
 ---
 layout: page
-title: About Us
+title: About Us IISc ACM student chapter
 add_to_menu: true
-description: "About Us"
-keywords: "about,us"
+description: "About Us IISc ACM student chapter"
+keywords: "about,us,IISc"
 ---
 
 <!-- Start About Us  Area -->
